hw04-GCComparisons исправление замечаний